# wallpaper

./: .gitignore  Cargo.toml  DEFAULT_config.ini  change.pl  check_doubles.pl  config.ini  config.ini.expample  gamepad.pl  get_favourites.pl  hotkeys.au3  hotkeys.ini  hotkeys.ini.example  teu.pl  tpu.pl  upload.pl  util.pm  wprename.pl
compile/: compile.pl
get/: tests.pl
get/lib/: Wallpaper.pm  util.pm
get/lib/Plugins/: Wallpapervoid.pm
get/wallpaperabyss/: DlUtil.pm  WallpaperAbyss.pm  dlutil.pm  next_url.txt  wp.db  wp.pl  wpa.pl
gwp/: Environment.cpp  Environment.h  Manipulator.cpp  Manipulator.h  Wallpaper.cpp  Wallpaper.h  WallpaperList.cpp  WallpaperList.h  gwp.cpp  gwp.sln  gwp.vcxproj  gwp.vcxproj.filters  wpc.sln  wpc.vcxproj  wpc.vcxproj.filters
lib/: Change.pm  ConfigRW.pm  UploadTools.pm  Util.pm  WPConfig.pm  Wallpaper.pm  WallpaperList.pm
src/: import.rs  main.rs  structs.rs
v2/: .gitignore  Cargo.toml
v2/src/: main.rs  structs.rs
wpt/: readme.txt  wpt.cpp
