[package]
name = "wpc-rust"
version = "0.1.0"
authors = ["ragnar <ragnar@rmgk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20"
strum_macros = "0.20"

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]

