[package]
name = "wpc-rust"
version = "0.1.0"
authors = ["ragnar <ragnar@rmgk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20"
strum_macros = "0.20"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
imagesize = "0.8.8"

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]

