[package]
name = "wpc-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20"
strum_macros = "0.20"
#num = "0.2"
#num-derive = "0.3"
#num-traits = "0.2"
#imagesize = "0.8.8"
toml = "0.5.7"
serde_derive = "1.0.117"
serde = "1.0.117"
walkdir = "2"
sha-1 = "0.9.2"
hex = "0.4.2"

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]

